Commented Code & and fixed some spacing

--- a/public/assests/css/style.css
+++ b/public/assests/css/style.css
@@ -19,13 +19,13 @@ body {
   z-index: 0;
 }
 .none {
-    float: none;
-    display: inline-block;
+    float: left;
     font-size: 30px;
     font-size: 20px;
 }
 .right {
-    float: right;
+    float: none;
+    display: inline;
 }
 .wingHolder {
     width: 100%;
@@ -43,7 +43,6 @@ body {
     border: solid #7C2A18 3px;
     margin-top: 20%;
     max-width: 260px;
-    margin-left: 10px;
 }
 .newFlavor {
     margin-bottom: 10px;
@@ -77,4 +76,10 @@ body {
 .panel-title {
     text-shadow: 2px 2px 4px white;
     color: black;
+}
+.rightSpacer {
+    float: right;
+}
+.leftSpacer {
+    float: left;
 }
